<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.ancap</groupId>
    <artifactId>HexagonLibrary</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>
    
    <modules>
        <module>Core</module>
        <module>FX</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <algorithm.framework.version>1.4.3</algorithm.framework.version>
        <core.version>1.2-beta.7</core.version>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <!-- put your configurations here -->
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.github.PukPukov</groupId>
            <artifactId>AncapCommons</artifactId>
            <version>1.9.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.ancap-dev.AlgorithmFramework</groupId>
            <artifactId>AxisAPI</artifactId>
            <version>${algorithm.framework.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.ancap-dev.AlgorithmFramework</groupId>
            <artifactId>WalkthroughAPI</artifactId>
            <version>${algorithm.framework.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.ancap-dev.AlgorithmFramework</groupId>
            <artifactId>CompactAPI</artifactId>
            <version>${algorithm.framework.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.32</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>RELEASE</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

</project>